# tql

./: README.md  checks.sh  pyproject.toml  setup.cfg
tests/: test_compiles.py  test_matches.py  testcase.html
tql/: __init__.py  ast.py  parser.py
