[metadata]
name = tql
description = A HTML tree query language
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/matsjoyce/tql
author = Matthew Joyce
license = LGPL 3.0+
license_file = LICENCE
project_urls =
    Documentation = https://github.com/matsjoyce/tql
    Source = https://github.com/matsjoyce/tql
    Tracker = https://github.com/matsjoyce/tql/issues

[options]
packages = find:
platforms = any
