[metadata]
name = tql
description = A HTML tree query language
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/matsjoyce/tql
author = Matthew Joyce
license = LGPL 3.0+
license_file = LICENCE
project_urls =
    Documentation = https://github.com/matsjoyce/tql
    Source = https://github.com/matsjoyce/tql
    Tracker = https://github.com/matsjoyce/tql/issues

[options]
packages = find:
platforms = any
install_requires =
    sly
    bs4

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
disable_error_code = no-redef
show_error_codes = True

[pylint.'MESSAGES CONTROL']
disable = C, R, redefined-builtin
